--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,8 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');*{
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+*{
   margin: 0;
   padding: 0;
   // box-sizing: border-box; // not neccesary
